Fixed HUNO-163: make horizontal scroll at the top of the appointments screen, so that admin no need to scroll down the page to scroll the horizontal scroll

--- a/src/admin/assets/css/style.css
+++ b/src/admin/assets/css/style.css
@@ -5171,3 +5171,19 @@ table.table-inbox tbody tr.checked {
 	font-size: 18px;
     font-weight: 300;
   }
+  .wrapper1, .table-responsive{
+	overflow-x: scroll; 
+	overflow-y:hidden;
+  }
+  .wrapper1{
+	 height: 20px; 
+   }
+   .table-responsive{
+	}
+   .div1 {
+	  width:1650px; height: 20px; 
+	}
+   .div2 {
+	  width:1650px; 
+	  overflow: auto;
+   }
